--- a/compaction.cfg
+++ b/compaction.cfg
@@ -23,4 +23,5 @@ SPECIFICATION Spec
 
 INVARIANTS
     TypeSafe,
-    CompactedLedgerLeak
+    CompactedLedgerLeak,
+    CompactionHorizonCorrectness
