--- a/compaction.cfg
+++ b/compaction.cfg
@@ -23,5 +23,6 @@ SPECIFICATION Spec
 
 INVARIANTS
     TypeSafe,
-    CompactedLedgerLeak,
+    \* we can use this invariant to reproduce the ledger leak bug, which is not fixed yet
+    \* CompactedLedgerLeak,
     CompactionHorizonCorrectness
