--- a/compaction.cfg
+++ b/compaction.cfg
@@ -8,6 +8,7 @@ CONSTANTS
     ValueSpace = {1, 2},
     RetainNullKey = TRUE,
     MaxCrashTimes = 1
+    PregenerateMessages = FALSE
 
 CONSTANTS
     Nil = Nil,
