add invariant DuplicateNullKeyMessage.

--- a/compaction.cfg
+++ b/compaction.cfg
@@ -7,8 +7,8 @@ CONSTANTS
     KeySpace = {"key1", "key2"},
     ValueSpace = {1, 2},
     RetainNullKey = TRUE,
-    MaxCrashTimes = 1
-    PregenerateMessages = FALSE
+    MaxCrashTimes = 1,
+    ModelProducer = FALSE
 
 CONSTANTS
     Nil = Nil,
@@ -26,4 +26,7 @@ INVARIANTS
     TypeSafe,
     \* we can use this invariant to reproduce the ledger leak bug, which is not fixed yet
     \* CompactedLedgerLeak,
-    CompactionHorizonCorrectness
+    CompactionHorizonCorrectness,
+    \* we can use this invariant to reproduce the message duplication bug, which is not fixed yet
+    \* DuplicateNullKeyMessage
+
